--- a/config/graph4nlp/graphsage_bi_fuse_static_constituency.yaml
+++ b/config/graph4nlp/graphsage_bi_fuse_static_constituency.yaml
@@ -1,5 +1,5 @@
 # Data
-dataset: 'rotten_tomatoes'
+dataset: 'imdb' # dataset to train the model ('rotten_tomatoes', 'imdb')
 val_split_ratio: 0.2 # validation set split ratio (default: 0.2)
 pretrained_word_emb_name: '840B'
 out_dir: '../../out/rotten_tomatoes/graphsage_bi_fuse_constituency_ckpt'
